🩹 - fix constructor of lombok